plugins {
    id 'java'
}

group 'com.github.trosenkrantz'
version '1.0.1'

project.sourceCompatibility = '1.8'
project.targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}

task sources(type:Jar){
    from sourceSets.main.allSource
    archiveClassifier.set("sources")
}

test {
    useJUnitPlatform()
}